1。样式构建完成 2。日期选择器构建完成

--- a/wpf-winthino/wpf-winthino.csproj
+++ b/wpf-winthino/wpf-winthino.csproj
@@ -101,7 +101,6 @@
     <Resource Include="image\斜体.png" />
     <Resource Include="image\日历.png" />
     <Resource Include="image\粗体.png" />
-    <Resource Include="image\粘贴.png" />
     <Resource Include="image\高亮.png" />
   </ItemGroup>
   <ItemGroup>
@@ -109,6 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="image\设置.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="image\粘贴-F.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
